better window open handling, fix double tab opening bug, dark mode prep

--- a/styles/common.css
+++ b/styles/common.css
@@ -106,6 +106,8 @@ a:hover {
 .settings img:hover {
 	filter: grayscale(0);
 	background: linear-gradient(-90deg, rgba(223,78,118,1) 0%, rgba(243,184,69,1) 100%);
+	clip-path: polygon(86% 25%, 75% 14%, 66% 24%, 57% 20%, 58% 6%, 42% 6%, 42% 19%, 34% 22%, 25% 13%, 13% 25%, 22% 34%, 19% 42%, 6% 42%, 6% 58%, 19% 59%, 22% 66%, 12% 76%, 24% 88%, 33% 78%, 41% 81%, 41% 94%, 58% 94%, 58% 82%, 67% 78%, 75% 88%, 87% 76%, 78% 67%, 82% 58%, 93% 58%, 93% 42%, 80% 42%, 77% 34%);
+	-webkit-clip-path: polygon(86% 25%, 75% 14%, 66% 24%, 57% 20%, 58% 6%, 42% 6%, 42% 19%, 34% 22%, 25% 13%, 13% 25%, 22% 34%, 19% 42%, 6% 42%, 6% 58%, 19% 59%, 22% 66%, 12% 76%, 24% 88%, 33% 78%, 41% 81%, 41% 94%, 58% 94%, 58% 82%, 67% 78%, 75% 88%, 87% 76%, 78% 67%, 82% 58%, 93% 58%, 93% 42%, 80% 42%, 77% 34%);
 	animation: spin 2.5s linear infinite;
 }
 
